...
            CircularProgressIndicator()
        }
    } else {
        val title =
            when (details.transaction.transactionType) {
                TransactionType.EXPENSE -> "Debit transaction"
                TransactionType.INCOME -> "Credit transaction"
                else -> "Transaction Details"
            }
        var selectedDateTime by remember(details) {
            mutableStateOf(Calendar.getInstance().apply { timeInMillis = details.transaction.date })
        }

...
                        colors = TopAppBarDefaults.topAppBarColors(containerColor = Color.Transparent),
                    )
                },
                containerColor = Color.Transparent,
            ) { innerPadding ->
                LazyColumn(
                    modifier = Modifier.padding(innerPadding).testTag("transaction_detail_lazy_column"),
                    verticalArrangement = Arrangement.spacedBy(16.dp),
                    contentPadding = PaddingValues(bottom = 16.dp),
                ) {
                    if (details.transaction.needsReview) {
                        item {
                            Box(modifier = Modifier.padding(horizontal = 16.dp)) {
...
